chore: simplify pom, update dependencies, Dockerfile and workflow