@@ -1,9 +1,8 @@
-FROM openjdk:15-slim
+FROM eclipse-temurin:17-jre-alpine
 
 ENV TZ=Europe/Oslo
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-VOLUME /tmp
 COPY /target/app.jar app.jar
 
-CMD java -jar -XX:+UseZGC $JAVA_OPTS app.jar
+CMD java -jar $JAVA_OPTS app.jar
